--- a/css/styles.css
+++ b/css/styles.css
@@ -2,7 +2,6 @@
 
 body{
 font-family: 'roboto' 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-
 }
 
 li{
@@ -18,7 +17,7 @@ display: flex;
 flex-direction: row;
 justify-content: space-between;
 background-color:#1F2937 ;
-color: white;
+color: #F9FAF8;
 
 }
 
@@ -26,11 +25,39 @@ color: white;
     display:flex;
     flex-direction:row;
     gap:20px;
-    align-items: center;
     padding-right: 50px;
     
 }
 
 .lefthead {
   
+}
+
+.sea01{
+    width: 400px;
+}
+
+.signup{
+    width:70px;
+}
+.section01 {
+    color: #F9FAF8;  
+    background-color:#1F2937 ;
+    display: flex;
+    justify-content: space-between;
+    gap:30px;
+}
+.left01{
+    display: flex;
+    flex-direction:column;
+    justify-content:center;
+}
+.title{
+    font-size: 48px;
+    font-weight: bolder;
+}
+.text01{
+    max-width: 400px;
+    font-size: 18px;
+    color:#E5E7EB;
 }
