--- a/css/styles.css
+++ b/css/styles.css
@@ -1,214 +1,214 @@
 /* { outline: 1px dotted red }*/
 
 body{
-font-family: roboto,'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-max-width: 1435px;
-margin: auto;
-
-}
-
-li{
-    list-style: none;
-}
-
-a{
-    text-decoration: none;
-    color: white;
-}
-.header{
-height:70px;
-display: flex;
-flex-direction: row;
-justify-content: space-between;
-background-color:#1F2937 ;
-color: #F9FAF8;
-align-items:center;
-margin-right: auto;
-
-
-}
-
-.righthead{
-    display:flex;
-    flex-direction:row;
-    gap:20px;
-
-    
-}
-
-.lefthead {
-  
-}
-.section01 {
-    color: #F9FAF8;  
-    background-color:#1F2937 ;
-    height:480px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap:30px;
-    
-}
-.sea01{
-    width: 550px;
-    height:250px;
-}
-
-.signup{
-    background-color:#3882F6;
-    border: none;
-    color: white;
-    padding: 10px 20px;
-    width:130px;
-    text-align: center;
-    font-size: 16px;
-    font-weight: 700;
-    border-radius: 10px;
-    cursor: crosshair;
-}
-.left01{
-    display: flex;
-    flex-direction:column;
-    justify-content:center;
-    gap:10px;
-    
-}
-.title{
-    font-size: 48px;
-    font-weight: bolder;
-    max-width: 400px;
-}
-.text01{
-    max-width: 400px;
-    font-size: 18px;
-    color:#E5E7EB;
-}
-.section02{
-    height:480px;
-    display: flex;
-    justify-content: center;
-    align-items:center;
-    flex-direction: column;
-    gap:50px;
-    
-}
-.content02 {
-    display:flex;
-    justify-content: center;
-    align-items: center;
-    gap:35px;
-    
-    
-}
-.title02{
-    font-size: 36px;
-    color:#1f2937;
-    font-weight:bolder;
+    font-family: roboto,'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    margin: auto;
     }
-.text02{
-    text-align: center;
-}
-
-.info02{
-    text-align: center;
-    max-width:200px;
-}
-.sea{
-    width: 170px;
-    height:170px;
-    border-radius: 25px;
-    border-width: 5px;
-    border-color: #8db6f8;
-    border-style: solid;
-}
-.section03{
-    background-color:#e5e7eb ;
     
-    display:flex;
-    justify-content: center;
+    li{
+        list-style: none;
+    }
     
-
-}
-.main03{
+    a{
+        text-decoration: none;
+        color: white;
+    }
+    
+    .header{
+    height:70px;
     display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    flex-wrap: nowrap;
-    height:400px;
-    width: 700px;
-    
-    
-}
-
-.quote{
- font-size: 36px;
- font-style: italic;
- 
- 
-}
-.author{
-font-size: 20px;
-font-weight: bold;
-align-self: flex-end;
-
-}
-
-.section04{
-    
-    height:330px;
-    display:flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.main04{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap:180px;
-    background-color: #3882F6;
-    width:1000px;
-    height:150px;
-    border-radius: 10px;
-}
-.left04{
-    display:flex;
-    flex-direction: column;
-    
-}
-.signup04{
-    
-    background-color:#3882F6;
-    color: white;
-    padding: 10px 20px;
-    border-style: solid;
-    border-width: 2px;
-    border-color: #F9FAF8;
-    width:130px;
-    text-align: center;
-    font-size: 16px;
-    font-weight: 700;
-    border-radius: 10px;
-    cursor: crosshair;
-    
-}
-.title04{
- color:#F9FAF8;
- font-size: 24px;
- font-weight: 600;
-}
-.content04{
-    color: #E5E7EB;
-    font-size: 18px;
-}
-.footer{
-    height:100px;
-    background-color: #1F2937;
+    flex-direction: row;
+    justify-content: space-between;
+    background-color:#1F2937 ;
     color: #F9FAF8;
-    display: flex;
-    justify-content: center;
     align-items:center;
+    padding-right: 100px;
+    margin-right: auto;
+    }
     
-    font-size: 18px;
-}
+    .righthead{
+        display:flex;
+        flex-direction:row;
+        gap:20px;      
+    }
+    
+    .lefthead {
+      font-size: 24px;
+      font-weight: 600;     
+    }
+
+    .section01 {
+        color: #F9FAF8;  
+        background-color:#1F2937 ;
+        height:480px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        gap:30px;  
+    }
+    
+    .sea01{
+        width: 550px;
+        height:250px;
+    }
+
+    .signup{
+        background-color:#3882F6;
+        border: none;
+        color: white;
+        padding: 10px 20px;
+        width:130px;
+        text-align: center;
+        font-size: 16px;
+        font-weight: 700;
+        border-radius: 10px;
+        cursor: crosshair;
+    }
+    .left01{
+        display: flex;
+        flex-direction:column;
+        justify-content:center;
+        gap:10px;
+        flex-wrap: nowrap;  
+    }
+
+    .title{
+        font-size: 48px;
+        font-weight: bolder;
+        max-width: 400px;
+    }
+
+    .text01{
+        max-width: 400px;
+        font-size: 18px;
+        color:#E5E7EB;
+    }
+    .section02{
+        height:480px;
+        display: flex;
+        justify-content: center;
+        align-items:center;
+        flex-direction: column;
+        gap:50px;
+        
+    }
+    .content02 {
+        display:flex;
+        justify-content: center;
+        align-items: center;
+        gap:35px;        
+    }
+
+    .title02{
+        font-size: 36px;
+        color:#1f2937;
+        font-weight:bolder;
+    }
+
+    .text02{
+        text-align: center;
+    }
+    
+    .info02{
+        text-align: center;
+        max-width:200px;
+    }
+
+    .sea{
+        width: 170px;
+        height:170px;
+        border-radius: 25px;
+        border-width: 5px;
+        border-color: #8db6f8;
+        border-style: solid;
+    }
+
+    .section03{
+        background-color:#e5e7eb ;
+        display:flex;
+        justify-content: center;
+    }
+
+    .main03{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        flex-wrap: nowrap;
+        gap:10px;
+        height:430px;
+        width: 800px;                
+    }
+
+    .quote{
+     font-size: 36px;
+     font-weight: 300;
+     font-style: italic;
+     color:#1F2937;    
+     
+    }
+
+    .author{
+    font-size: 22px;
+    font-weight: bold;
+    align-self: flex-end;
+    }
+    
+    .section04{
+        height:330px;
+        display:flex;
+        justify-content: center;
+        align-items: center;
+    }
+    
+    .main04{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        gap:180px;
+        background-color: #3882F6;
+        width:1000px;
+        height:150px;
+        border-radius: 10px;
+    }
+    .left04{
+        display:flex;
+        flex-direction: column;
+        
+    }
+    .signup04{
+        background-color:#3882F6;
+        color: white;
+        padding: 10px 20px;
+        border-style: solid;
+        border-width: 2px;
+        border-color: #F9FAF8;
+        width:130px;
+        text-align: center;
+        font-size: 16px;
+        font-weight: 700;
+        border-radius: 10px;
+        cursor: crosshair;   
+    }
+
+    .title04{
+     color:#F9FAF8;
+     font-size: 24px;
+     font-weight: 600;
+    }
+
+    .content04{
+        color: #E5E7EB;
+        font-size: 18px;
+    }
+
+    .footer{
+        height:100px;
+        background-color: #1F2937;
+        color: #F9FAF8;
+        display: flex;
+        justify-content: center;
+        align-items:center;
+        
+        font-size: 18px;
+    }
