--- a/css/styles.css
+++ b/css/styles.css
@@ -41,12 +41,15 @@ body{
     .section01 {
         color: #F9FAF8;  
         background-color:#1F2937 ;
-        height:480px;
+        min-height:480px;
         display: flex;
         justify-content: center;
         align-items: center;
-        gap:30px;  
-    }
+        gap:70px;
+        padding-left: 20px;
+        padding-right:20px;
+        flex-wrap: wrap;
+        }
     
     .sea01{
         width: 550px;
@@ -70,7 +73,7 @@ body{
         flex-direction:column;
         justify-content:center;
         gap:10px;
-        flex-wrap: nowrap;  
+        flex-wrap: wrap;
     }
 
     .title{
@@ -91,8 +94,7 @@ body{
         align-items:center;
         flex-direction: column;
         gap:50px;
-        
-        
+        padding-top: 20px;        
     }
     .content02 {
         display:flex;
@@ -141,7 +143,9 @@ body{
         flex-wrap: nowrap;
         gap:10px;
         height:430px;
-        width: 800px;                
+        width: 800px;
+        padding-left: 20px;
+        padding-right:20px;                
     }
 
     .quote{
@@ -169,17 +173,18 @@ body{
         display: flex;
         justify-content: center;
         align-items: center;
-        gap:180px;
+        gap:220px;
         background-color: #3882F6;
         width:1000px;
         height:150px;
         border-radius: 10px;
+        padding-left:20px;
+        padding-right:20px;
     }
     .left04{
         display:flex;
-        flex-direction: column;
-        
-    }
+        flex-direction: column;     
+        }
     .signup04{
         background-color:#3882F6;
         color: white;
